k3s/infras/overlays/traefik-ingress/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    # traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-opa-auth@kubernetescrd
spec:
  rules:
    - host: demo-dev.manhlam.name.vn
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: backend-for-frontend-svc
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 3000
